syntax = "proto3";

option go_package = "example/backend/grpc";

import "google/protobuf/empty.proto";

package todo;

service Todo {
  rpc GetList (TodoGetListReuqest) returns (TodoGetListResponse);
  rpc Create (TodoCreateRequest) returns (TodoResponse);
  rpc Get (TodoGetRequest) returns (TodoResponse);
  rpc Update (TodoUpdateeRequest) returns (TodoResponse);
  rpc Delete (TodoGetRequest) returns (google.protobuf.Empty);
}

message TodoGetListReuqest {
  optional uint32 limit = 1;
  optional uint32 offset = 2;
}

message TodoGetListResponse {
  uint32 total = 1;
  repeated TodoResponse items = 2;
}

message TodoCreateRequest {
  string title = 1;
  string category = 2;
  optional string content = 3;
}

message TodoUpdateeRequest {
  string id = 1;
  optional string title = 2;
  optional string category = 3;
  optional string content = 4;
}

message TodoResponse {
  string id = 1;
  string title = 2;
  string category = 3;
  optional string content = 4;
}

message TodoGetRequest {
  string id = 1;
}
